--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "monorepo-starter",
+  "type": "module",
   "private": true,
   "packageManager": "pnpm@9.15.9",
-  "type": "module",
+  "license": "MIT",
   "engines": {
     "node": ">= 18"
   },
@@ -11,19 +12,19 @@
     "lint:fix": "eslint --fix",
     "prepare": "husky"
   },
-  "license": "MIT",
+  "dependencies": {
+    "eslint": "^9.30.0"
+  },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.16.1",
+    "@antfu/eslint-config": "^3.16.0",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "eslint": "^9.29.0",
     "husky": "^9.1.7",
     "jsdom": "^19.0.0",
     "lint-staged": "^13.2.3",
     "rimraf": "^5.0.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "@unocss/eslint-plugin": "^66.2.3"
+    "typescript": "^5.7.3"
   },
   "config": {
     "commitizen": {
@@ -31,6 +32,6 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,vue}": "eslint --fix '**/*.{js,jsx,ts,tsx,vue}'"
+    "*": "eslint --fix"
   }
 }
